# RVsim

./: .gitignore  CMakeLists.txt  Makefile  README.md  exec_tests.sh  rvsim_exe
include/: isa.h  memory.h  processor.h  registers.h  utils.h
libs/: CMakeLists.txt  isa.cpp  main.cpp  memory.cpp  processor.cpp  registers.cpp  utils.cpp
rvsim/: CMakeLists.txt  main.cpp
